--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,67 +4,165 @@
 @import './base/typography';
 
 body {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
   font-family: 'Arimo';
   font-weight: 400;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .content-container {
   margin: 0 auto;
   padding: 5vh 5vw 0;
   width: 80%;
-  // min-height: 100vh;
-}
-
-.memes-list {
-  display: flex;
-  flex-direction: column;
-  // align-items: center;
-  justify-content: center;
-
-}
-
-.memes-list_item {
-  margin-top: 5px;
-
-  img {
-    display: none;
-    width: 60%;
-    margin: 0 auto;
-
-    // &:active {
-    //   display: block;
-    // }
-  }
-
-  &::after {
-    content: "";
-    display: block;
-    height: 2px;
-    background-color: rgb(117, 117, 117);
-    margin-top: 5px;
-  }
-
-  &:hover {
-    cursor: pointer;
-  }
-
-  &:hover img {
-    display: block;
-  }
-
 }
 
 .h1-title {
   font-size: 3rem;
+  padding-bottom: 1.5rem;
+  border-bottom: 0.1rem solid black;
+}
 
-  &::after {
-    content: "";
-    display: block;
-    height: 2px;
-    background-color: rgb(117, 117, 117);
-    margin-top: 5px;
+.memes-list {
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+
+  input[type='checkbox'] {
+    display: none;
   }
+
+  .memes-content {
+
+    width: 100%;
+
+    img {
+      margin: 0 auto;
+      display: block;
+    }
+
+    p {
+      font-size: 0;
+    }
+
+    img {
+      width: 0;
+      height: 0;
+      padding: 0;
+      transition: 0.3s ease all;
+    }
+  }
+
+  input:checked+label {
+    .memes-list_item_close {
+      transform: rotate(0deg);
+      transition: 0.3s ease all;
+    }
+  }
+
+  input:checked+label .memes-content {
+    img {
+      padding: 1.5rem;
+      width: 40%;
+      height: auto;
+      margin: 0 auto;
+      transition: 0.3s ease all;
+    }
+
+    p {
+      width: auto;
+      height: auto;
+      font-size: inherit;
+    }
+  }
+
+  .memes-list_item {
+    border-bottom: 0.1rem solid black;
+    cursor: pointer;
+
+    .memes-list_item_title {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1.5rem 0;
+      cursor: pointer;
+    }
+
+    // &:hover {
+    //   .memes-content img {
+    //     padding: 1.5rem;
+    //     width: 40%;
+    //     height: auto;
+    //     margin: 0 auto;
+    //     transition: 0.3s ease all;
+    //   }
+
+    //   .memes-content p {
+    //     width: auto;
+    //     height: auto;
+    //     font-size: inherit;
+    //   }
+
+    //   .memes-list_item_close {
+    //     transform: rotate(0deg);
+    //     transition: 0.3s ease all;
+    //   }
+
+    // }
+
+    .memes-list_item_close {
+      max-width: 1.5rem;
+      height: 1.5rem;
+      transform: rotate(45deg);
+      transition: 0.3s ease all;
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+
+  .memes-list {
+    input:checked+label .memes-content {
+      img {
+        width: 80%;
+      }
+    }
+
+    .memes-list_item {
+      // &:hover {
+      //   width: 80%;
+      // }
+    }
+  }
+}
+
+@media (hover: hover) {
+
+  .memes-list_item:hover {
+    .memes-content img {
+      padding: 1.5rem;
+      width: 40%;
+      height: auto;
+      margin: 0 auto;
+      transition: 0.3s ease all;
+    }
+
+    .memes-content p {
+      width: auto;
+      height: auto;
+      font-size: inherit;
+    }
+
+    .memes-list_item_close {
+      transform: rotate(0deg);
+      transition: 0.3s ease all;
+    }
+
+  }
+
+
+
 }
